--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
   data-dir="por definir"
   data-wa="51988343240"  <!-- +51 Perú sin símbolos -->
 >
+  <audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+  Tu navegador no soporta el formato de audio.
+</audio>
   <!-- Fondo animado -->
   <div class="sky" aria-hidden="true">
     <div class="layer" id="layerA"></div>
@@ -447,3 +451,4 @@ END:VCALENDAR`;
   </script>
 </body>
 </html>
+
