--- a/InvitacionLes.html
+++ b/InvitacionLes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="theme-color" content="#0d0d0d">
   <title>🎉 Cumpleaños de Derian & Leslin 🎉</title>
-  <meta name="description" content="Invitación al cumpleaños compartido de Derian Hernandez y Leslin Bernales - Minimalista y colorido">
+  <meta name="description" content="Invitación al cumpleaños compartido de Derian Hernandez y Leslin Bernales">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body
@@ -119,3 +119,4 @@
   </script>
 </body>
 </html>
+
