--- a/invitacionDer.html
+++ b/invitacionDer.html
@@ -47,7 +47,8 @@
         </div>
 
         <div class="actions" style="margin:12px 0 4px">
-          <button class="btn" id="btnICS" type="button">🗓️ Agregar a Calendario</button>
+          <!--<button class="btn" id="btnICS" type="button">🗓️ Agregar a Calendario</button>-->
+          <a class="btn" id="btnICS" href="evento.ics">🗓️ Agregar a Calendario</a>
           <a class="btn light" id="btnMaps" target="_blank" rel="noopener">📍 Ver en Maps</a>
           <button class="btn warn" id="btnShare" type="button">✨ Compartir</button>
         </div>
@@ -119,4 +120,5 @@
   </script>
 </body>
 </html>
+
 
