--- a/invitacionDer.html
+++ b/invitacionDer.html
@@ -75,6 +75,10 @@
             <div class="muted">Sport Elegante</div>
           </div>
           <div class="item">
+            <strong>Música en Vivo</strong>
+            <div class="muted">Orquesta Jireh</div>
+          </div>
+          <div class="item">
             <strong>Prohibido!!</strong>
             <div class="muted">Aburrirse 😩 y no traer regalos 🎁</div>
           </div>
@@ -120,5 +124,6 @@
   </script>
 </body>
 </html>
+
 
 
