--- a/InvitacionLes.html
+++ b/InvitacionLes.html
@@ -74,6 +74,10 @@
             <div class="muted">Sport Elegante</div>
           </div>
           <div class="item">
+            <strong>Música en Vivo</strong>
+            <div class="muted">Orquesta Jireh 💃🕺</div>
+          </div>
+          <div class="item">
             <strong>Prohibido!!</strong>
             <div class="muted">Aburrirse 😩 y no traer regalos 🎁</div>
           </div>
@@ -119,5 +123,6 @@
   </script>
 </body>
 </html>
+
 
 
