--- a/invitacion.html
+++ b/invitacion.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="theme-color" content="#0d0d0d">
-  <title>🎉 Cumpleaños de Derian & Leslin 🎉</title>
-  <meta name="description" content="Invitación al cumpleaños compartido de Derian Hernandez y Leslin Bernales - Minimalista y colorido">
+  <title>🎉 Cumpleaños de Derian 🎉</title>
+  <meta name="description" content="Invitación al cumpleaños compartido de Derian Hernandez - Minimalista y colorido">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
