--- a/invitacion.html
+++ b/invitacion.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="theme-color" content="#0d0d0d">
   <title>🎉 Cumpleaños de Derian 🎉</title>
-  <meta name="description" content="Invitación al cumpleaños de Derian Hernandez - Minimalista y colorido">
+  <meta name="description" content="Invitación al cumpleaños de Derian Hernandez">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body
@@ -118,5 +118,6 @@
   </script>
 </body>
 </html>
+
 
 
